--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,28 @@
     "tuple": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "atomic": "cpp",
+    "bitset": "cpp",
+    "cfenv": "cpp",
+    "chrono": "cpp",
+    "cinttypes": "cpp",
+    "codecvt": "cpp",
+    "complex": "cpp",
+    "condition_variable": "cpp",
+    "csetjmp": "cpp",
+    "cstdarg": "cpp",
+    "cuchar": "cpp",
+    "list": "cpp",
+    "unordered_set": "cpp",
+    "filesystem": "cpp",
+    "future": "cpp",
+    "mutex": "cpp",
+    "ratio": "cpp",
+    "scoped_allocator": "cpp",
+    "shared_mutex": "cpp",
+    "thread": "cpp",
+    "typeindex": "cpp",
+    "charconv": "cpp"
   }
 }
