test spj compile

--- a/judgecore/conf/default.json.sample
+++ b/judgecore/conf/default.json.sample
@@ -23,5 +23,9 @@
     "temp": ["/tmp", ["judge-", "$pid", "-", "$sid"]],
     "exec": ["$temp", "main"],
     "spj": ["$base", "judge", "$pid"]
+  },
+  "spj": {
+    "code": ["$spj", ".", "$lang_ext"],
+    "target": "$spj"
   }
 }
